--- a/DotNetLibrary.Utilities/DotNetLibrary.Utilities.csproj
+++ b/DotNetLibrary.Utilities/DotNetLibrary.Utilities.csproj
@@ -118,6 +118,7 @@
     <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
     <CodeContractsReferenceAssembly>%28none%29</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -131,9 +132,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Configuration\ConfigurationSections\CustomAppSettingsConfigurationSection.cs" />
     <Compile Include="Configuration\ConfigurationSections\DatabaseConfigurationSection.cs" />
-    <Compile Include="Configuration\DatabaseSettings.cs" />
-    <Compile Include="Configuration\Elements\DatabaseConfigurationElement.cs" />
+    <Compile Include="Configuration\CustomConfigurationSettings.cs" />
+    <Compile Include="Configuration\Elements\CustomConfigurationElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
