Converts static class to non-static and introduce interface for easier testing.

--- a/DotNetLibrary.Utilities/DotNetLibrary.Utilities.csproj
+++ b/DotNetLibrary.Utilities/DotNetLibrary.Utilities.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Configuration\ConfigurationSections\DatabaseConfigurationSection.cs" />
     <Compile Include="Configuration\CustomConfigurationSettings.cs" />
     <Compile Include="Configuration\Elements\CustomConfigurationElement.cs" />
+    <Compile Include="Configuration\ICustomConfigurationSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
