--- a/DotNetLibrary.Utilities/DotNetLibrary.Utilities.csproj
+++ b/DotNetLibrary.Utilities/DotNetLibrary.Utilities.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Configuration\Elements\CustomConfigurationElement.cs" />
     <Compile Include="Configuration\ICustomConfigurationSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilitis\OperationResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
